--- a/library_res/src/main/res/values/font_styles.xml
+++ b/library_res/src/main/res/values/font_styles.xml
@@ -1,7 +1,17 @@
 <resources>
 
+    <style name="text_9_ffffff">
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">9sp</item>
+    </style>
+
     <style name="text_12_999999">
         <item name="android:textColor">#999999</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="text_12_ffffff">
+        <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">12sp</item>
     </style>
 
@@ -104,6 +114,12 @@
     <style name="text_18_666666">
         <item name="android:textColor">#666666</item>
         <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="text_18_ffffff_b">
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="text_20_FFFFFF_b">
