--- a/module_order/src/main/res/layout/order_activity_payment_choose.xml
+++ b/module_order/src/main/res/layout/order_activity_payment_choose.xml
@@ -8,6 +8,7 @@
     </data>
 
     <android.support.constraint.ConstraintLayout
+            android:id="@+id/clayout_root"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -142,7 +143,6 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/tx_size15"
                 android:enabled="@{viewModel.enablePayNow}"
-                app:onClickCommand="@{viewModel.clickOfPayNow}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="327:40"
                 app:layout_constraintEnd_toEndOf="parent"
