--- a/library_res/src/main/res/values/styles.xml
+++ b/library_res/src/main/res/values/styles.xml
@@ -8,17 +8,29 @@
         <!--colorPrimary 对应ToolBar的颜色-->
         <item name="colorPrimary">@color/colorPrimaryDark</item>
         <!--colorPrimaryDark对应状态栏的颜色-->
-        <item name="colorPrimaryDark">@color/colorAccent</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <!--colorAccent 对应EditText编辑时、RadioButton选中、CheckBox等选中时的颜色。-->
         <item name="colorAccent">@color/colorAccent</item>
         <!--导航栏颜色-->
-        <item name="android:navigationBarColor">@color/colorAccent</item>
+        <item name="android:navigationBarColor">@color/navigationBarColor</item>
         <item name="android:windowBackground">@color/appbg_color</item>
         <item name="android:listDivider">@drawable/shape_list_divider</item>
 
         <!-- 配置qmui提供的theme -->
         <item name="QMUITopBarStyle">@style/QDTopBar</item>
+
     </style>
+
+    <!--全屏主题-->
+    <style name="ModuleTheme.FullScreen" parent="@android:style/Theme.NoTitleBar.Fullscreen">
+    </style>
+
+    <!--透明主题-->
+    <style name="ModuleTheme.Translucent" parent="AppMainTheme">
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
 
     <!--标题-->
     <style name="QDTopBar" parent="QMUI.TopBar">
