--- a/module_main/src/main/res/values/styles.xml
+++ b/module_main/src/main/res/values/styles.xml
@@ -1,12 +1,6 @@
 <resources>
     <!--StartActivity Style 冷启动效果-->
-    <style name="MainAppTheme.Start" parent="@android:style/Theme.NoTitleBar.Fullscreen">
+    <style name="MainModuleTheme.Start" parent="@android:style/Theme.NoTitleBar.Fullscreen">
         <item name="android:windowBackground">@drawable/main_activity_start</item>
     </style>
-    
-    <!--全屏主题-->
-    <style name="MainTheme.FullScreen" parent="@android:style/Theme.NoTitleBar.Fullscreen">
-
-    </style>
-
 </resources>
