--- a/module_system/src/main/res/layout/system_activity_entrance.xml
+++ b/module_system/src/main/res/layout/system_activity_entrance.xml
@@ -56,7 +56,7 @@
         <ImageView
                 android:id="@+id/iv_fans_manager"
                 android:layout_width="wrap_content"
-                android:src="@mipmap/system_share"
+                android:src="@mipmap/system_fans_manager"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="@id/bg_fans_manager"
                 app:layout_constraintStart_toStartOf="@id/guideline1"
@@ -67,7 +67,7 @@
                 android:id="@+id/tv_fans_manager"
                 android:layout_width="wrap_content"
                 style="@style/text_15_333333_b"
-                android:text="@string/system_share"
+                android:text="@string/system_fans_manager"
                 android:layout_marginStart="@dimen/gap_size11"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="@id/bg_fans_manager"
